# eth_rpc

./: .gitignore  Cargo.toml  README.md  regression.sh  source_env_example.sh
.github/workflows/: test.yaml
src/: hex.rs  lib.rs
src/rpc_impl/: batch.rs  eth_block_number.rs  eth_estimate_gas.rs  eth_gas_price.rs  eth_get_balance.rs  eth_get_block_by_number.rs  eth_get_logs.rs  eth_get_storage_at.rs  eth_get_transaction_by_hash.rs  eth_get_transaction_count.rs  eth_get_transaction_receipt.rs  eth_send_raw_tx.rs  eth_syncing.rs  jr_call.rs  mod.rs  rpc.rs  safe_id.rs
src/rpc_impl/custom/: get_account_info.rs  mod.rs
src/rpc_impl/eth_call/: erc20.rs  eth_call.rs  mod.rs
src/transport/: env_http.rs  http.rs  ipc.rs  mod.rs  transport.rs
