[package]
name = "eth_rpc"
version = "0.1.0"
edition = "2021"
description = "simple eth rpc with helper functions"
license = "MIT OR Apache-2.0"

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
revm = { version = "3.3.0", features = ["serde", "std"] }
ethers = { version = "1.0.2", features = ["abigen"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tracing = "0.1.37"
oxhttp = { version = "0.1.6", features = ["rustls"] }
rand = "0.8.5"
itertools = "0.10.5"