[package]
name = "eth_rpc"
version = "0.2.6"
edition = "2021"
description = "simple eth rpc with helper functions"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/copiumnicus/eth_rpc"
repository = "https://github.com/copiumnicus/eth_rpc"
keywords = ["web3", "ethereum", "rpc", "api", "jsonbatch"]

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
revm = { version = "3.3.0", features = ["serde", "std"] }
# force dep of revm -> revm-primitives to be 1.1.2
revm-primitives = "=1.1.2"

ethers = { version = "1.0.2", features = ["abigen"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tracing = "0.1.37"
oxhttp = { version = "0.1.6", features = ["rustls"] }
rand = "0.8.5"
itertools = "0.10.5"
